채팅 서비스 개발 v3.5 - 시스템 메시지 카운트 제외 및 채팅방 노출(isDisplayed) 로직 개선