@@ -9,6 +9,7 @@ import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Table(name = "chat_room")
 @Entity
@@ -42,7 +43,7 @@ public class ChatRoomEntity {
         if (domain.getChatParticipants() != null) {
             participantEntities = domain.getChatParticipants().stream()
                     .map(ChatParticipantEntity::fromDomain)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         return ChatRoomEntity.builder()
